# mampf

./: Cargo.toml  Config.toml  LICENSE
src/: app.rs  config.rs  fm_state.rs  keys.rs  main.rs  state.rs  tui.rs  util.rs
src/ui/: mod.rs  terminal_ui.rs
