[package]
name = "mampf"
version = "0.1.0"
authors = ["Nooo37 <70270606+Nooo37@users.noreply.github.com>"]
edition = "2018"
description = "file manager"
license = "MIT"
repository = "https://github.com/Nooo37/mampf"
homepage = "https://github.com/Nooo37/mampf"

[dependencies]
toml = "0.4.2"
termion = "1.5.5"
tui = "0.9.4"

